--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <link rel="stylesheet" href="./src/styles.css">
     <title></title>
 </head>
-<body>
-    
+<body class = "pop-up">
+    <div id = 'pop-up'>
+        <div class = 'container'>
+            <h1>Kung Goo Your Skills</h1>
+            <p>Amir the mailing list to be spammed with useless ninja tips</p>
+            <input type="email" placeholder="email" required >
+            <button>Hii Ya</button>
+            <div class = "cross"></div>
+        </div>
+    </div>
 </body>
 </html>
