--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p>Amir the mailing list to be spammed with useless ninja tips</p>
             <input type="email" placeholder="email" required >
             <button>Hii Ya</button>
-            <div class = "cross"></div>
+            <div class = "cross">x</div>
         </div>
     </div>
 </body>
